fix: improve message box layout and shortcut visibility

--- a/wordpane/src/taskpane/components/MessageBox/style.css
+++ b/wordpane/src/taskpane/components/MessageBox/style.css
@@ -21,3 +21,7 @@
   width: 33px;
   height: 35px;
 }
+
+div.MuiGrid-root.shortcuts {
+  margin-top: 5px;
+}
